# quotatray

./: README.md  index.html  package-lock.json  package.json  prd.md  vite.config.ts
docs/: brand-ui-guidelines.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
