[package]
name = "quotatray"
version = "0.1.0"
description = "Track AI coding limits from your tray."
authors = ["QuotaTray"]
edition = "2021"

[lib]
name = "quotatray_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
thiserror = "1"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
